[package]
name = "esp32-deep-sleep-rtc-test"
version = "0.1.0"
authors = ["blinry <mail@blinry.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.17.0"
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }

[features]
default = ["esp32-hal/xtal-40mhz"]

